fix alignment on methods page

--- a/app/assets/stylesheets/methods.css
+++ b/app/assets/stylesheets/methods.css
@@ -1,5 +1,6 @@
 #three_stages_wrapper {
   margin-bottom: 40px;
+  align-self: center;
 }
 
 #three_stages {
